--- a/debian/rules
+++ b/debian/rules
@@ -1,6 +1,9 @@
 #!/usr/bin/make -f
-export DH_VERBOSE=1
+#export DH_VERBOSE=1
 export PYBUILD_NAME=rofication
+
+override_dh_installsystemd:
+	dh_installsystemd --name rofication
 
 %:
 	dh $@ --with python3 --buildsystem=pybuild
